--- a/paper/agda.tex
+++ b/paper/agda.tex
@@ -2,8 +2,8 @@
 \label{sec:agda}
 
 \input{Type}
-% \input{Context}
-% \input{Permutations}
+\input{Context}
+\input{Permutations}
 % \input{Process}
 % \input{Congruence}
 % \input{Reduction}
